Re-added the deleted index.html. Added normalize.css. Foundation laid

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*THESE ARE THE FONTS YOU ADDED
+font-family: 'Nunito', sans-serif;
+font-family: 'Lobster', cursive;
+font-family: 'Droid Serif', serif;
+
+*******************************/
 * {
     box-sizing: border-box;
 }
