--- a/css/style.css
+++ b/css/style.css
@@ -36,19 +36,18 @@ a:visited {
 
 /*NAV BAR*********************/
 
-.nav li:hover {
+nav li:hover {
     box-shadow: 0 0 7px rgb(150, 150, 150);
 }
-.nav li:active {
+nav li:active {
     background-color: gray;
 }
-.nav ul {
+nav ul {
     text-align: center;
     margin: 0 auto;
     display: block;
 }
-.nav li {
-    padding: 5px;
+nav li {
     background-color: white;
     font-family: "Droid Serif", serif;
     font-weight: bold;
@@ -58,11 +57,17 @@ a:visited {
     margin: 10px 10px;
     
 }
-.nav {
+nav {
     overflow: hidden;
     margin: 0 auto;
     text-align: center;
     width: 100%;
+}
+nav a {
+    padding: 5px;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
 }
 
  /*PROFILE IMAGE SIZING AND SHADOW ALSO THE PARAGRAPH*/
@@ -129,7 +134,7 @@ a:visited {
  
 footer {
         box-shadow: 0 -2px 8px;
-        background-color: gray;
+        background-color: rgb(200,200,200);
         margin: 100px auto 10px;
         bottom: 0;
 		text-align: center;
@@ -164,16 +169,18 @@ footer h2{
      display: table;
  }
  
- /*MEDIA QUERIES @321******** IPAD SCREENS    ****/
+ /*MEDIA QUERIES @426******** IPAD SCREENS    ****/
  
-<<<<<<< HEAD
- @media(min-width: 376px) {
-=======
- @media(min-width: 426px) {
->>>>>>> master
-     .nav a {
+ @media(min-width: 768px) {
+     nav a {
          display: inline-block;
-         width: 175px;
+         width: 100%;
+         height: 100%;
+     }
+     nav li {
+         display: inline-block;
+         width: 20%;
+         margin: 10px 10px;
      }
      
      .me {
@@ -249,6 +256,7 @@ footer h2{
         display: block;
     }
     .largefoot li {
+        border: 1px solid black;
         padding: 10px 25px;
         background-color: white;
         font-family: "Droid Serif", serif;
@@ -256,10 +264,13 @@ footer h2{
         display: block;
         list-style: none;
         text-align: center;
+        margin: 10px;
      }
      .largefoot a {
+         display: inline-block;
          text-align: center;
-         margin: 5px;
+         height: 100%;
+         width: 100%;
      }
      #smallhome {
          display: none;
@@ -268,24 +279,35 @@ footer h2{
  
  /*MONITORSSSSS**************/
  
-  @media(min-width:769px) {
+  @media(min-width:1024px) {
+      nav {
+          margin: 40px;
+      }
+      nav li {
+          clear: both;
+          width: 20%;
+          margin-right: 10px;
+      }
       h1 {
-          font-size: 2em;
+          overflow: hidden;
+          font-size: 2.3em;
           float: left;
           margin-left: 35px;
       }
-      .nav ul {
-        float: right;
+      nav ul {
+          margin-right: 20px;
+          float: right;
           margin-top: 20px;
-          width: 50%;
+          width: 60%;
       }
-      .nav a {
-          max-width: 20%;
+      nav a {
+          width: 100%;
+          height: 100%;
           vertical-align: top;
       }
       .me p {
           line-height:1.5em;
-          font-size: 1.2em;
+          font-size: 1.5em;
       }
       .profile {
           width: 40%;
@@ -294,17 +316,17 @@ footer h2{
           width: 32%;
           display: inline-block;
       }
-      footer {
-          
-      }
       .skills p {
           padding: 0 25%;
       }
       .largefoot li {
-          margin: auto auto;
+          display: inline-block;
+          margin: 25px 30px;
+          width: 30%;
       }
       .largefoot a {
-          margin: 72px 5px;
+          width: 100%;
+          height: 100%;
           display: inline-block;
           }
         .fleft {
