--- a/css/style.css
+++ b/css/style.css
@@ -133,33 +133,37 @@ nav a {
  
  
 footer {
-        box-shadow: 0 -2px 8px;
-        background-color: rgb(200,200,200);
-        margin: 100px auto 10px;
-        bottom: 0;
-		text-align: center;
-		font-size: .85em;
-		max-height: 250px;
+    margin-top: 100px;
+  text-align: center;
+  clear: both;
+  background-color: black;
+  color: white;
+  height: 100px;
+  margin-bottom: 0;
+  width: 100%;
+  position: relative;
+    -webkit-box-shadow: 0 -20px 20px -20px rgba(0,0,0,0.8);
+    -moz-box-shadow: 0 -20px 20px -20px rgba(0,0,0,0.8);
+    box-shadow: 0 -20px 20px -20px rgba(0,0,0,0.8);
 }
-.social {
-		text-align: center;
-		float: none;
-		margin-bottom: 5px;
-		width: 40px;
-        height: 40px;
-        padding: 2px;
-	}
+
+footer .social_media {
+    margin: 0 auto;
+    display: block;
+}
+
 footer p {
-		text-align: center;
-		display: block;
-		float: none;
-		padding-bottom: 15px;
+    padding-top: 15px;
+    text-align: middle;
+    display: inline-block;
+    margin: 0 auto;
+  
 }
-footer h2{
-    padding-top: 20px;
-}
-.largefoot {
-    display: none;
+footer .social {
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    padding: 10px;
 }
 
 /*CLEARFIX*******/
@@ -220,60 +224,7 @@ footer h2{
      }
     
      
-      /*FOOTER PROBLEMS***********/
       
-     footer {
-         line-height: 1em;
-         width: 100%;
-         float: left;
-         overflow: hidden;
-     }
-     .fleft {
-         display: inline-block;
-         float: left;
-         width: 50%;
-     }
-     .fright {
-         display: inline-block;
-         float: right;
-         width: 50%;
-         margin: auto auto;
-     }
-     .largefoot {
-         display: inline-block;
-         margin: auto auto;
-     }
-     .largefoot li:hover {
-        box-shadow: 0 0 7px rgb(0, 0, 0);
-        background-color: white;
-    }
-    .largefoot li:active {
-        background-color: gray;
-    }
-    .largefoot ul {
-        text-align: center;
-        margin: 0 auto;
-        display: block;
-    }
-    .largefoot li {
-        padding: 10px 25px;
-        background-color: white;
-        font-family: "Droid Serif", serif;
-        font-weight: bold;
-        display: block;
-        list-style: none;
-        text-align: center;
-        margin: 10px;
-     }
-     .largefoot a {
-         display: inline-block;
-         text-align: center;
-         height: 100%;
-         width: 100%;
-     }
-     #smallhome {
-         display: none;
-     }
  }
  
  /*MONITORSSSSS**************/
@@ -318,22 +269,7 @@ footer h2{
       .skills p {
           padding: 0 25%;
       }
-      .largefoot li {
-          display: inline-block;
-          margin: 25px 30px;
-          width: 30%;
-      }
-      .largefoot a {
-          width: 100%;
-          height: 100%;
-          display: inline-block;
-          }
-        .fleft {
-            width:40%;
-        }
-        .fright{
-            width: 60%;
-        }
+      
         }
       
       
