--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ font-family: 'Droid Serif', serif;
 
 *******************************/
 * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 	box-sizing: border-box;
 	margin:0px;
 	padding:0px;
@@ -133,18 +135,18 @@ nav a {
  
  
 footer {
-    margin-top: 100px;
   text-align: center;
   clear: both;
   background-color: black;
   color: white;
   height: 100px;
+  margin-top: 40px;
   margin-bottom: 0;
   width: 100%;
   position: relative;
-    -webkit-box-shadow: 0 -20px 20px -20px rgba(0,0,0,0.8);
-    -moz-box-shadow: 0 -20px 20px -20px rgba(0,0,0,0.8);
-    box-shadow: 0 -20px 20px -20px rgba(0,0,0,0.8);
+  -webkit-box-shadow: 0 -10px 20px -7px rgba(0,0,0,0.8);
+  -moz-box-shadow: 0 -10px 20px -7px rgba(0,0,0,0.8);
+  box-shadow: 0 -10px 20px -7px rgba(0,0,0,0.8);
 }
 
 footer .social_media {
